Modified some of the templates.

--- a/app/templates/baseplate/blocks/navmenu-user.html
+++ b/app/templates/baseplate/blocks/navmenu-user.html
@@ -2,7 +2,7 @@
 							<li><a href="{{ url_for('BaseView:index') }}">Home</a></li>
 							<li><a href="{{ url_for('BaseView:home') }}">Services</a>
 								<ul>
-									<li><a href="{{ url_for('PagesView:get', uuid='f7a73acf-6b65-472b-b39c-39f5df1f455a') }}">Asset Optimization</a></li>
+									<li><a href="{{ url_for('PagesView:get', uuid='f7a73acf-6b65-472b-b39c-39f5df1f455a') }}">Global Take-back</a></li>
 									<li><a href="{{ url_for('PagesView:get', uuid='6513db97-eb95-4c7c-9b95-4aa3e4aad00e') }}">Data Security</a></li>
 									<li><a href="{{ url_for('PagesView:get', uuid='1249fd8b-164c-489c-9db9-13ae3c15cd8b') }}">RoHS &amp; WEEE Assessment</a>
 									<ul>
