--- a/app/templates/baseplate/about.html
+++ b/app/templates/baseplate/about.html
@@ -16,7 +16,6 @@
 	  </div>
 	  <div class="clear"></div>
 	  <h3 class="head1">Why should you use our services?</h3>
-	  <p class="p1">M-Cubed Global offers great opportunities to create a wonderful life. Come for the peace, come for the security, come for the opportunity, but most of all, come for the future of your family and this great country! </p>
 	  <ul class="list">
 		<li>We have offered a highly professional service for over 30 years.</li>
 		<li>We have thousands of satisfied customers.</li>
@@ -31,10 +30,10 @@
 	  <p>We are aggressive and responsive provider of environmental services, with a total commitment to excellence. We are dedicated to the interests of our clients and delivery of extraordinarily responsive, creative, practical and high quality solutions to their problems, developed from their point of view. We are also dedicated to providing our clients with quality service at a competitive cost. </p>
 	  <p class="col1">
 		<strong>With many years of experience in environmental consulting in the community, our company has been offering professional and extensive services. </strong>
-		<p>M-Cubed Global has partnered with "Best in Class" organizations with a world wide presence to provide extended Component Engineering Services, Testing, Service & Repair along with M-Cubed Global's expertise in RoHS, WEEE, E-Waste, Excess and Obsolete Inventory Management and Marketing Services. With our partners we can touch every region of the World including EMEA, APAC, Americas, and China.</p>
+		<p>M-Cubed Global has partnered with "Best in Class" organizations with a world wide presence to provide extended Component Engineering Services, Testing, Service & Repair along with M-Cubed Global's expertise in RoHS, WEEE, E-Waste, Excess and Obsolete Inventory Management and Marketing Services. With our partners we can touch every region of the World including EMEA, APAC, and Americas.</p>
 		<p>To further our reach, we have partnered with a German Firm as M-Cubed Global's certified collector/recycler in EMEA and with two additional partners in the APAC region located in Singapore and Malaysia.</p>
 	</p>
-	  <a href="#" class="btn">read more</a>
+	  <!-- <a href="#" class="btn">read more</a> -->
 	</div>
 	<div class="grid_4">
 	  <h3>Why Choose M-Cubed Global for Compliance?</h3>
@@ -42,7 +41,7 @@
 	  <div class="text1 tx1"><a href="#">California Senate Bill (SB) 20/50</a></div>
 	  <p>California Senate Bill (SB) 20/50 is the California equivalent to the Restriction of Hazardous Substance (RoHS) and Waste Electrical Electronic Equipment (WEEE) European Union (EU) Directives. M-Cubed Global, with the release of the EU Directives has increased their Service portfolio offerings to include providing full turn-key services in becoming RoHS and WEEE Certified. M-Cubed Global has leveraged its certification to CA SB 20/50 along with its twenty plus years in the Asset Management and Recovery business to become the industry leader in offering a WEEE solution to our Customer Base.  The entire M-Cubed Global family worked diligently and was always focused on achieving our certification and takes great pride in our CA SB 20/50 Certification.</p>
 	  <p>There are hundreds of certified collectors but <br>M-Cubed Global is only one of a handful of Certified Collectors AND Recyclers to acquire <br>California Senate Bill 20/50 certification.</p>
-	  <h3 class="head1">testimonials</h3>
+	  <!-- <h3 class="head1">testimonials</h3>
 	  <blockquote class="bq2">
 		<p>Dealing with M-Cubed Global made things extremely quick and easy. <img src="/static/images/iconlogos/quotes.png" alt=""></p>
 		
@@ -55,7 +54,7 @@
 		<div class="bq_bot">G. Cantin
 		  <div class="upp">(@kamilion)</div>
 		</div>
-	  </blockquote>
+	  </blockquote> -->
 	</div>
   </div>   
 </div>
