Expand contact forms.

--- a/app/templates/baseplate/blocks/navmenu-user.html
+++ b/app/templates/baseplate/blocks/navmenu-user.html
@@ -12,6 +12,12 @@
 									</li>
 								</ul>
 							</li>
+							<li><a href="{{ url_for('BaseView:home') }}">Trade-Ins</a>
+								<ul>
+									<li><a href="/tickets/fireeye"><img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo.png') }}" alt="FireEye Logo"></a></li>
+									<li><a href="/tickets/riverbed"><img src="{{ url_for('static', filename='images/iconlogos/partner-riverbed-logo.png') }}" alt="Riverbed Logo"></a></li>
+								</ul>
+							</li>
 							<!-- <li><a href="{{ url_for('PagesView:get', uuid='5cb464a6-a73d-465a-9265-546990f59d18') }}">Takeback</a></li> -->
 							<li><a href="http://www.ebay.com/sch/mcubedglobal/m.html">Store</a></li>
 							<li><a href="{{ url_for('BaseView:about') }}">About Us</a>
