--- a/tickets/templates/tickets/ticketform.html
+++ b/tickets/templates/tickets/ticketform.html
@@ -33,7 +33,7 @@
 		<h3>Worldwide Coverage Map</h3>
 			<div>
 				<a href="{{ url_for('static', filename='pdf/m-cubed_list_of_countries.pdf') }}">
-					<img src='/static/images/worldlocations_map.jpg' border='0' />
+					<img src='/static/images/worldlocations_map.jpg' border='0' height='300' width='400' />
 					<div class="copy">Click here for a list of countries in our service areas</div>
 				</a>
 			</div>
