Everything looks good, time to go live.

--- a/tickets/templates/tickets/ticketform-fireeye.html
+++ b/tickets/templates/tickets/ticketform-fireeye.html
@@ -15,7 +15,7 @@
 			<br>
 			<strong>Please enter your contact details, you will be sent a set of Trade-In/Trade-Up Program forms.</strong>
 			<br>
-			<br>Forms should arrive via email within 1 business day in the Acrobat PDF Format.<br>
+			<br>Forms should arrive via email within 1-2 business days in the Acrobat PDF Format.<br>
 			</p>
 			<p>
 			<br>
