--- a/tickets/templates/tickets/ticketform-default.html
+++ b/tickets/templates/tickets/ticketform-default.html
@@ -43,7 +43,7 @@
 	  <h3>contact us</h3>
 			<form id="form" action="{{ url_for('TicketsView:do_ticket') }}" method=post>
 					  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-					  {{ form.csrf_token }}
+					  {{ form.hidden_tag() }}
 					  <div class="success_wrapper">
 					  <div class="success-message">Contact form submitted</div>
 					  </div>
