--- a/tickets/templates/tickets/ticketform-riverbed.html
+++ b/tickets/templates/tickets/ticketform-riverbed.html
@@ -16,6 +16,7 @@
 			<strong>Please enter your contact details, you will be sent a set of Trade-Up Loyalty Program forms.</strong>
 			<br>
 			<br>Forms should arrive via email within 1-2 business days in the Acrobat PDF Format.<br>
+			<br>Note: Google Chrome's PDF viewer will not save filled forms. Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a>.<br>
 			</p>
 			<p>
 			<br>
@@ -44,7 +45,7 @@
 	  <h3>contact us</h3>
 			<form id="form" action="{{ url_for('TicketsView:do_ticket') }}" method=post>
 					  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-					  {{ form.csrf_token }}
+					  {{ form.hidden_tag() }}
 					  <div class="success_wrapper">
 					  <div class="success-message">Loyalty Program request submitted</div>
 					  </div>
