Cleaned up ticket forms, added partner logos.

--- a/tickets/templates/tickets/ticketform-riverbed.html
+++ b/tickets/templates/tickets/ticketform-riverbed.html
@@ -13,10 +13,13 @@
 		<h3>Riverbed Loyalty Program</h3>
 			<p>
 			<br>
+			<img src="{{ url_for('static', filename='images/iconlogos/partner-riverbed-logo.png') }}" alt="Riverbed Logo">
+			<br>
+			<br>
 			<strong>Please enter your contact details, you will be sent a set of Trade-Up Loyalty Program forms.</strong>
 			<br>
-			<br>Forms should arrive via email within 1-2 business days in the Acrobat PDF Format.<br>
-			<br>Note: Google Chrome's PDF viewer will not save filled forms. Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a>.<br>
+			<br>Forms should arrive via email within 1-2 business days in the <a href="https://get.adobe.com/reader/">Acrobat PDF Format</a>.<br>
+			<br><span style="color:red">Note:</span> Google Chrome's PDF viewer will not save filled forms. Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a>.<br>
 			</p>
 			<p>
 			<br>
@@ -27,7 +30,7 @@
 							Campbell, CA 95008-6917<br>
 							Telephone: +1 408 752 1560<br>
 							Fax: +1 408 752 1575<br>
-							Email: mteam@m-cubed.com<br>
+							Email: rb@m-cubed.com<br>
 					</span>
 			</p>
 
