Removed the chrome notice.

--- a/tickets/templates/tickets/ticketform-riverbed.html
+++ b/tickets/templates/tickets/ticketform-riverbed.html
@@ -19,7 +19,6 @@
 			<strong>Please enter your contact details, you will be sent a set of Trade-Up Loyalty Program forms.</strong>
 			<br>
 			<br>Forms should arrive via email within 1-2 business days in the <a href="https://get.adobe.com/reader/">Acrobat PDF Format</a>.<br>
-			<br><span style="color:red">Note:</span> Google Chrome's PDF viewer will not save filled forms. Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a>.<br>
 			</p>
 			<p>
 			<br>
@@ -76,7 +75,7 @@
 					  <div>
 					  <div class="clear"></div>
 					  <div class="btns">
-					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">send us a message</a><br>
+					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">send information request</a><br>
                                      <div class="copy"><a href="{{ url_for('BaseView:privacy') }}">Our Privacy Policies</a></div>
                                      </div>
 					  </div>
