Wow, what a fugly send button.

--- a/tickets/templates/tickets/ticketform-fireeye.html
+++ b/tickets/templates/tickets/ticketform-fireeye.html
@@ -18,8 +18,9 @@
 			<br>
 			<strong>Please enter your contact details, you will be sent a set of Trade-In/Trade-Up Program forms.</strong>
 			<br>
-			<br>Forms should arrive via email within 1-2 business days in the <a href="https://get.adobe.com/reader/">Acrobat PDF Format.</a><br>
-			</p>
+			<br>Forms should arrive via email within 1-2 business days.<br>
+			<br>Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a> to complete the form, save and e-mail back to us<br>
+                     </p>
 			<p>
 			<br>
 			<h3>M-Cubed Global's Shipping Address</h3>
@@ -74,7 +75,7 @@
 					  <div>
 					  <div class="clear"></div>
 					  <div class="btns">
-					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">send information request</a><br>
+					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn"><img src="{{ url_for('static', filename='images/iconlogos/send.jpg') }}" alt="Send Button"></a><br>
                                      <div class="copy"><a href="{{ url_for('BaseView:privacy') }}">Our Privacy Policies</a></div>
                                      </div>
 					  </div>
