--- a/tickets/templates/tickets/ticketform-riverbed.html
+++ b/tickets/templates/tickets/ticketform-riverbed.html
@@ -18,7 +18,8 @@
 			<br>
 			<strong>Please enter your contact details, you will be sent a set of Trade-Up Loyalty Program forms.</strong>
 			<br>
-			<br>Forms should arrive via email within 1-2 business days in the <a href="https://get.adobe.com/reader/">Acrobat PDF Format</a>.<br>
+			<br>Forms should arrive via email within 1-2 business days.<br>
+			<br>Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a> to complete the form, save and e-mail back to us<br>
 			</p>
 			<p>
 			<br>
@@ -75,7 +76,7 @@
 					  <div>
 					  <div class="clear"></div>
 					  <div class="btns">
-					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">send information request</a><br>
+					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn"><img src="{{ url_for('static', filename='images/iconlogos/send.jpg') }}" alt="Send Button"></a><br>
                                      <div class="copy"><a href="{{ url_for('BaseView:privacy') }}">Our Privacy Policies</a></div>
                                      </div>
 					  </div>
