Shrank the form, switched that ugly jpeg out for a picographic png.

--- a/tickets/templates/tickets/ticketform-fireeye.html
+++ b/tickets/templates/tickets/ticketform-fireeye.html
@@ -75,7 +75,7 @@
 					  <div>
 					  <div class="clear"></div>
 					  <div class="btns">
-					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn"><img src="{{ url_for('static', filename='images/iconlogos/send.jpg') }}" alt="Send Button"></a><br>
+					  <a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn"><img src="{{ url_for('static', filename='images/iconlogos/email.png') }}" width=128 height=128 alt="Send Button"></a><br>
                                      <div class="copy"><a href="{{ url_for('BaseView:privacy') }}">Our Privacy Policies</a></div>
                                      </div>
 					  </div>
