--- a/app/templates/baseplate/blocks/navmenu-user.html
+++ b/app/templates/baseplate/blocks/navmenu-user.html
@@ -14,8 +14,20 @@
 							</li>
 							<li><a href="{{ url_for('BaseView:home') }}">Trade-Ins</a>
 								<ul>
-									<li><a href="/tickets/fireeye"><img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo.png') }}" alt="FireEye Logo"></a></li>
+									<li><a href="/tickets/fireeye"><img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo.png') }}" alt="FireEye Logo"></a>
+									<ul>
+										<li><a href="/tickets/fireeye"><img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo-graphic.png') }}" alt="FireEye Graphic Logo" height="20px">Trade Up</a></li>
+										<li><a href="/tickets/fireeye-eval"><img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo-graphic.png') }}" alt="FireEye Graphic Logo" height="20px">Evaluations</a></li>
+									</ul>
+									</li>
+
 									<li><a href="/tickets/riverbed"><img src="{{ url_for('static', filename='images/iconlogos/partner-riverbed-logo.png') }}" alt="Riverbed Logo"></a></li>
+									<li><a href="/tickets/equitrac"><img src="{{ url_for('static', filename='images/iconlogos/partner-equitrac-logo.png') }}" alt="Equitrac Logo"></a></li>
+									<li><a href="/tickets/aurora"><img src="{{ url_for('static', filename='images/iconlogos/partner-aurora-logo.png') }}" alt="Aurora Logo"></a></li>
+									<li><a href="/tickets/windriver"><img src="{{ url_for('static', filename='images/iconlogos/partner-windriver-logo.png') }}" alt="Wind River Logo"></a></li>
+									<li><a href="/tickets/nuance"><img src="{{ url_for('static', filename='images/iconlogos/partner-nuance-logo.png') }}" alt="Nuance Logo"></a></li>
+									<li><a href="/tickets/inada"><img src="{{ url_for('static', filename='images/iconlogos/partner-inada-logo.png') }}" alt="Inada Family Logo"></a></li>
+									<li><a href="/tickets/wonderworkshop"><img src="{{ url_for('static', filename='images/iconlogos/partner-wonderworkshop-logo.png') }}" alt="Wonder Workshop Logo"></a></li>
 								</ul>
 							</li>
 							<!-- <li><a href="{{ url_for('PagesView:get', uuid='5cb464a6-a73d-465a-9265-546990f59d18') }}">Takeback</a></li> -->
