--- a/app/templates/baseplate/index.html
+++ b/app/templates/baseplate/index.html
@@ -133,10 +133,11 @@
 	  <h3 style="padding-top: 37px;">Welcome to M-Cubed Global</h3>
 	  <ul class="list">
 		<li style="font-size: large;"><a href="{{ url_for('PagesView:get', uuid='f7a73acf-6b65-472b-b39c-39f5df1f455a') }}" class="">
-		Worldwide in-country take-back and processing for loyalty programs, trade-in and trade-up programs, asset optimization and E-Waste Solutions
+		<!-- Worldwide in-country take-back and processing for loyalty programs, trade-in and trade-up programs, asset optimization and E-Waste Solutions -->
+		M-Cubed Global is a worldwide, with in country/region, Take-Back, and processor of Loyalty Programs,<br> Trade-In/ Up Programs, Renewal Programs, Evaluation, RMA Pools, and E-Waste Solutions<br> Serving for O.E.M.'s in over 81 countries.
               </a></li><br>
 		<li style="font-size: large;"><a href="{{ url_for('PagesView:get', uuid='1249fd8b-164c-489c-9db9-13ae3c15cd8b') }}" class="">
-		RoHS, WEEE, and Reach Certification
+		RoHS2, WEEE, and Reach2 Certification
 		</a></li><br>
 		<li style="font-size: large;"><a href="{{ url_for('PagesView:get', uuid='6513db97-eb95-4c7c-9b95-4aa3e4aad00e') }}" class="">
 		Data Security for all memory devices under Sarbanes-Oxley and HIPAA
