--- a/app/static/css/superfish.css
+++ b/app/static/css/superfish.css
@@ -7,6 +7,16 @@
 	box-shadow: inset 0 1px 2px #0f9cd1;
 }
 
+/* Fixed this in skeleton.css instead by changing 960 to 1000 and 748 to 785*/
+/*
+.menu_block .container_12 {
+	width: 1000px;
+}
+.menu_block .container_12 .grid_12 {
+	width: 100%;
+}
+*/
+
 .oth {
 	float: right;
 
@@ -56,9 +66,11 @@ nav{ position:relative;padding: 0px 0 0 0;}
 	position: relative;
 	color: #60d0fc;
 }
+
+/* Adjust both paddings here equally for menu tab width */
 .sf-menu>li+li>a {
-	padding-left: 46px;
-	padding-right: 42px;
+	padding-left: 48px;
+	padding-right: 48px;
 }
 
 .sf-menu>li>a:hover,
@@ -144,11 +156,12 @@ nav{ position:relative;padding: 0px 0 0 0;}
 }
 
 
+/* Adjust left and right paddings here for menu widths */
 .sf-menu li ul li a{
 	position: relative;
 	z-index: 999;
 	display: block;
-	padding: 4px 5px 5px 22px;
+	padding: 4px 5px 5px 5px;
 	color:#fff;	
 
 }
@@ -181,9 +194,10 @@ nav{ position:relative;padding: 0px 0 0 0;}
 
 }
 
+/* Adjust left padding here for menu width */
 .sf-menu li.sfHover li.sfHover ul li a {
 	color: #fff;
-	padding-left: 42px;
+	padding-left: 23px;
 	padding-right: 0;
 }
 
