--- a/app/templates/baseplate/layout.html
+++ b/app/templates/baseplate/layout.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<meta name = "format-detection" content = "telephone=no" />
+	<meta keywords = " ROHS2,WEEE,REACH2 COMPLIANCE CERTIFICATION,ISO 14001-2004,ASSET MANAGEMENT,DE-INSTALLATION & REMOVAL,GLOBAL MULTI-SITE REMOVAL,WEEE TAKE BACK,ITAD,DOD,HARD DRIVES WIPING,DATA DESTRUCTION,REFURBISHING,REMARKETING,BUY BACK PARTNER,IT EQUIPMENT SALES,END OF LIFE MANAGEMENT,OBSOLETE AND EXCESS SELLS,ELECTRONICS RECYCLING,COLLECTION & RECYCLE,RECYCLING REPRESENTATIVE,DE-INSTALL,E-WASTE MANAGEMENT,CONSULTING SERVICES,REDUCE,REUSE,RECYCLE,ELECTRONICS RECYCLING ">
 	{% block header_meta %}{% endblock header_meta %}
 	<link rel="icon" href="{{ url_for('static', filename='images/iconlogos/favicon.ico') }}">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='images/iconlogos/favicon.ico') }}" />
