--- a/tickets/templates/tickets/ticketslist.html
+++ b/tickets/templates/tickets/ticketslist.html
@@ -9,25 +9,9 @@
       <ul class=results>
         <hr>
         {% for result in results %}
-        <li> <em> <h4> <a href="{{ url_for('TicketsView:get', uuid=result.id) }}">{{ result.meta['updated_at']|safe }}</a> <h4> </em> <br>
-        {% if result.meta['source'] == "fireeye" %}
-        <h4>Source:</h4> <img src="{{ url_for('static', filename='images/iconlogos/partner-fireeye-logo.png') }}" width=200 height=50 alt="FireEye Logo"><br>
-        {% endif %}
-        {% if result.meta['source'] == "riverbed" %}
-        <h4>Source:</h4> <img src="{{ url_for('static', filename='images/iconlogos/partner-riverbed-logo.png') }}" width=200 height=50 alt="Riverbed Logo"><br>
-        {% endif %}
-        {% if result.meta['source'] == "ContactUs" %}
-        <h4>Source:</h4> <img src="{{ url_for('static', filename='images/iconlogos/f_logo.png') }}" width=200 height=50 alt="M-Cubed Logo"><br>
-        {% endif %}
-        <h4>Name:</h4> <h5>{{ result.meta['name']|safe }}</h5><br>
-        <h4>Email:</h4> <h7><a href="mailto:{{ result.meta['email']|safe }}">{{ result.meta['email']|safe }}</a></h7><br>
-        <h4>Phone:</h4> <h7>{{ result.meta['phone']|safe }}</h7><br>
-        <h4>Message:</h4><br><h7>{{ result.message|safe }}</h7><br>
-        <br>
-        <hr>
-        <br>
+        <li> {%- include 'tickets/blocks/manytickets.html' -%} </li>
       {% else %}
-        <li><em>No Tickets here so far...</em>
+        <li><em>No New Tickets are currently in the queue...</em></li>
       {% endfor %}
       </ul>
     </div>
