--- a/tickets/templates/tickets/ticketslist.html
+++ b/tickets/templates/tickets/ticketslist.html
@@ -6,6 +6,7 @@
     <div class="grid_12">
       {%- include 'baseplate/blocks/flashed.html' -%}
       <h3><a href="{{ url_for('TicketsView:admin') }}">User Submitted Tickets</a></h3>
+      <h3><a href="{{ url_for('TicketsView:archived') }}">Archived User Submitted Tickets</a></h3>
       <ul class=results>
         <hr>
         {% for result in results %}
