Time for some updates to bubble up to github.

--- a/app/templates/baseplate/index.html
+++ b/app/templates/baseplate/index.html
@@ -140,7 +140,7 @@
 		RoHS2, WEEE, and Reach2 Certification
 		</a></li><br>
 		<li style="font-size: large;"><a href="{{ url_for('PagesView:get', uuid='6513db97-eb95-4c7c-9b95-4aa3e4aad00e') }}" class="">
-		Data Security for all memory devices under Sarbanes-Oxley and HIPAA
+		Data Security for all memory devices under Sarbanes-Oxley and HIPAA, Including Electronic Data destruction services as per NIST 800-88r1 guidelines with Certificate of Destruction.
 		</a></li><br>
 	  </ul>
 	</div>
