--- a/tickets/templates/tickets/blocks/shippingaddress.html
+++ b/tickets/templates/tickets/blocks/shippingaddress.html
@@ -1,7 +1,4 @@
-			<br>
-			<br>Forms should arrive via email within 1-2 business days.<br>
-			<br>Please use <a href="https://get.adobe.com/reader/">Adobe Acrobat Reader</a> to complete the form, save and e-mail back to us.<br>
-                     </p>
+            </p>
 			<p>
 			<br>
 			<h3>M-Cubed Global's Shipping Address</h3>
@@ -11,6 +8,6 @@
 							Campbell, CA 95008-6917<br>
 							Telephone: +1 408 752 1560<br>
 							Fax: +1 408 752 1575<br>
-							Email: FireEye.TB@m-cubed.com<br>
+							Email: mteam@m-cubed.com<br>
 					</span>
 			</p>
