--- a/tickets/templates/tickets/blocks/ticketform.html
+++ b/tickets/templates/tickets/blocks/ticketform.html
@@ -40,7 +40,7 @@
 						{{ form.recaptcha }}
 
 						<div class="btns">
-							<a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">send us a message</a><br>
+							<a href="#" onclick="$(this).closest('form').submit()" data-type="submit" class="btn">Submit Message</a><br>
 							<div class="copy">
 								<a href="{{ url_for('BaseView:privacy') }}">Our Privacy Policies</a>
 							</div>
