--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -64,11 +64,13 @@ h1, h2, h3, h4, h5, h6, h7, h8, h9 {
     font-weight: bold;
 }
 
+/** h3.padding-top: 63px; **/
+
 h3 {
     font-size: 24px;
     line-height: 26px;
     color: #2b2b2b;
-    padding-top: 63px;
+    padding-top: 10px;
     text-transform: uppercase;
     margin-bottom: 19px;
 }
