--- a/tickets/templates/tickets/blocks/coveragemap.html
+++ b/tickets/templates/tickets/blocks/coveragemap.html
@@ -1,7 +1,8 @@
 		<h3>Worldwide Coverage Map</h3>
 			<div>
-				<a href="{{ url_for('static', filename='pdf/m-cubed_list_of_countries.pdf') }}">
-					<img src='/static/images/worldlocations_map.jpg' border='0' height='300' width='400' />
+				<!-- <a href="{{ url_for('static', filename='pdf/m-cubed_list_of_countries.pdf') }}"> -->
+				<a href="{{ url_for('static', filename='images/hot-links/coverage_map_1440p.png') }}">
+					<img src='/static/images/hot-links/coverage_map_720p.png' border='0' width='600' />
 					<div class="copy">Click here for a list of countries in our service areas</div>
 				</a>
 			</div>
