Jquery to 1.12, fix mailer for gmail's SSL.

--- a/app/templates/baseplate/layout.html
+++ b/app/templates/baseplate/layout.html
@@ -8,8 +8,8 @@
 	<meta name = "format-detection" content = "telephone=no" />
 	<meta keywords = " ROHS2,WEEE,REACH2 COMPLIANCE CERTIFICATION,ISO 14001-2004,ASSET MANAGEMENT,DE-INSTALLATION & REMOVAL,GLOBAL MULTI-SITE REMOVAL,WEEE TAKE BACK,ITAD,DOD,HARD DRIVES WIPING,DATA DESTRUCTION,REFURBISHING,REMARKETING,BUY BACK PARTNER,IT EQUIPMENT SALES,END OF LIFE MANAGEMENT,OBSOLETE AND EXCESS SELLS,ELECTRONICS RECYCLING,COLLECTION & RECYCLE,RECYCLING REPRESENTATIVE,DE-INSTALL,E-WASTE MANAGEMENT,CONSULTING SERVICES,REDUCE,REUSE,RECYCLE,ELECTRONICS RECYCLING ">
 	{% block header_meta %}{% endblock header_meta %}
-	<link rel="icon" href="{{ url_for('static', filename='images/iconlogos/favicon.ico') }}">
-	<link rel="shortcut icon" href="{{ url_for('static', filename='images/iconlogos/favicon.ico') }}" />
+	<link rel="icon" href="{{ url_for('static', filename='images/iconlogos/m3_logo_32x32.png') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='images/iconlogos/m3_logo_32x32.png') }}" />
 	{% block header_css_pre %}{% endblock header_css_pre %}
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 	{% block header_css_post %}{% endblock header_css_post %}
